@@ -1,0 +1,2 @@
+# change the next line to 0 if you want to offer AUTH without TLS
+1
